# ecommerce-returns-automation-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  returns.db
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  main.py
app/api/: __init__.py
app/core/: constants.py  context.py  exceptions.py  logging.py  metrics.py  observability.py
app/integrations/: __init__.py  shipping_client.py
app/models/: __init__.py  pipeline.py  returns.py
app/repositories/: __init__.py
app/routes/: health.py  returns.py
app/schemas/: returns.py
app/services/: analytics_service.py  audit.py  classification.py  classification_service.py  communication_service.py  decision.py  fraud_service.py  ingestion.py  orchestrator.py  process_return_service.py  product_condition_service.py  refund_service.py  rma_service.py  routing.py  scoring.py  validation.py
data/: sample_email.txt
docs/: RUNBOOK.md
docs/adr/: 0001-ai-vs-rule-based-refund.md  0002-fraud-scoring-design.md  0003-database-choice.md  README.md
eval/: test_set.jsonl
migrations/: env.py
migrations/versions/: 16c106781b6b_return_record_observability_fields.py  (+1 more)
models/: return_request.py
scripts/: evaluate.py
services/: ai_extractor.py  eligibility.py  inventory.py  label_generator.py  router.py
tests/: conftest.py  test_classification.py  test_decision.py  test_health.py  test_return_flow.py  test_scoring.py  test_validation.py
utils/: logger.py
(+44 files in other folders)
